azure-aks/deployment/canary-deployment/green-deployment-2.yaml
# green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-app
      version: v2.0
  template:
    metadata:
      labels:
        app: green-app
        version: v2.0
    spec:
      containers:
      - name: my-app-con
        image: longflew/ingress:GREENPAGE
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---

apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: green-app
  ports:
  - port: 80
    targetPort: 80
