azure-aks/deployment/canary-deployment/canary-ingress.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: \"true\"
    nginx.ingress.kubernetes.io/canary-weight: \"10\"
spec:
  ingressClassName: nginx
  rules:
  - host: app.dhille.shop
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: green-svc
            port:
              number: 80
