azure-aks/deployment/canary-deployment/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.dhille.shop
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blue-svc
            port:
              number: 80
